bash-2.05b.tar-bash-2.05b.tar.sd.bz2  or
bash-2.05b.tar-bash-2.05b.tar.sd.7z
sdreq downloads the patch that is available.
Consequently, sdreq now requires p7zip installed since
some patches may not be available bzip2 compressed.
This change is entirely transparent to those using the sdreq client.

If you want a bash-2.05.tar.bz2 tarball then touch that
in your want directory and it will probably be provided.
If no suitable patch can be created then the smallest
bzip2 or 7za compressed tarball will be downloaded
instead and the compression type will be translated
to the type specified by the wanted filename.


Wed Mar 16 01:32:45 UTC 2005	20050316	Kyle Sallee
The sdreq client has been enhanced to generate better
matches between the sources a box has and wanted sources.


Tue Mar 22 22:40:52 UTC 2005	20050322	Kyle Sallee
New location/modification for downloading patches and sources.
This change was to make it easier to rsync mirror the PPR's
patches and optimially compressed source tarballs.
What used to be:
http://ibiblio.org/sdelta/patches/ and
http://ibiblio.org/sdelta/sources/  is now
http://ibiblio.org/sdelta/files/patches/
http://ibiblio.org/sdelta/files/sources/, respectively.


Sun Apr 17 05:15:59 UTC 2005	no release	Kyle Sallee
I finished the coding for sdelta 2.
The compressed patch files generated by sdelta 2
can be between 10% and 60% smaller than sdelta.
However there is a 3x increase in time required to make the 
patch and a small less than 1.25x increase in memory usage.
However the sdelta2 patches do apply faster.

Although 10%->60% smaller compressed patch files yields
faster downloads the impact upon overall patch savings
would be between 1% and 5% per patch.
Considering that the sdelta PPR is already running near
95% savings the enhancement could yield only an additional
2% savings at best.

You can make sdelta2 by typing make sdelta2, but you must
manually install it and I have not updated the sd wrapper
to support sdelta 2 archive files yet.